# Prog2

./: CMakeLists.txt  README.md
Project_ALL/MY_Pdfs/: Donations_Report_maxim_sbeity.html
Project_ALL/data/: charities.json  donations.json  users.json
Project_ALL/output/: logs.json
Project_ALL/src/: main.cpp
Project_ALL/src/my_functions/: charity_management.cpp  donation_management.cpp  exporttopdf.cpp  logger.cpp  panels.cpp  user_management.cpp  utils.cpp
Project_ALL/src/structsandfunctions/: exporttopdf.h  functions.h  log_thingy.h  structures.h
